[package]
name = "defmtusb"
description = "defmt logging over USB interface"

version = "0.1.0"
edition = "2021"

readme = "README.md"
repository = "https://github.com/micro-rust/defmtusb"

license = "MIT OR MPL-2.0"

publish = true

categories = ["development-tools::debugging", "embedded", "no-std"]
keywords = ["defmt", "embedded", "logging", "usb"]



[dependencies]

[dependencies.critical-section]
version = "*"

[dependencies.defmt]
version = "=0.3.0"

[dependencies.embassy-futures]
version = "0.1.0"
git = "https://github.com/embassy-rs/embassy"

[dependencies.embassy-time]
version = "0.1.0"
features = ["defmt", "defmt-timestamp-uptime"]
git = "https://github.com/embassy-rs/embassy"

[dependencies.embassy-usb]
version = "0.1.0"
git = "https://github.com/embassy-rs/embassy"

[dependencies.static_cell]
version = "^1.2"
features = ["nightly"]



[features]

default = ["buffersize-256"]

buffersize-128  = []
buffersize-256  = []
buffersize-512  = []
buffersize-1024 = []
